--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="Jeanine Gonzalez" />
+    <meta
+      name="description"
+      content="Aprendiendo a respirar para sanar. Sesiones de Mindfulness para calmar la ansiedad, el estrés y los sentimientos de tristeza."
+    />
+    <meta name="keywords" content="mindfulness,yoga,meditación" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="Spanish" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -26,7 +36,10 @@
     -->
     <title>Jeanine Gonzalez</title>
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Quicksand:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
