Form working correctly

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Aprendiendo a respirar para sanar. Sesiones de Mindfulness para calmar la ansiedad, el estrés y los sentimientos de tristeza."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
